# firebase-client-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: client.rs  error.rs  lib.rs  notification.rs
