[package]
name = "firebase-client"
version = "0.0.1"
authors = ["mlcruz1 <mlcruz@inf.ufrgs.br>", "MatheusWoeffel <matheuswoeffel@gmail.com>"]
edition = "2018"
repository = "https://github.com/mobiltracker/firebase-client-rs"
description = "A firebase HTTP v1 client implementation in Rust using the google_authz library."
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google-authz = { version = "0.0.2", features = ["client"] }
hyper-rustls = { version = "0.22" }
hyper = "0.14.15"
tokio = "1.13.0"
serde = "1"
serde_json = "1"

[dev-dependencies]
dotenv = "0.15.0"

[lib]
path = "src/lib.rs"
